--- a/estilo2.css
+++ b/estilo2.css
@@ -1,119 +1,24 @@
-/* configuraçao para toda a pagina*/
 
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    
-}
 
 /* menu topico de cima(padrao)*/
 #menu {
      padding-left: 10%;
-    color:white;
     font-size: 20px;
+    text-decoration: none;
 }
 #menugeral{
     background-color: #ff5100e1;
 }
-a {
-    text-decoration: none;
-    color:white;
-    font-size: 20px;
-    font-style: italic;
-}
-#t1 {
-    padding-left: 5%;
-    align-content: center;
-    font-size: 20px;
-    width: 25%;
-    text-decoration: none;
-
+/*id das imgens dos produtos no index*/
+#imgInicial{
+    padding-left: 8%;
 }
 
-
-
-/*rodapé (padrão)*/
-h4 {
-    text-align: center;
-    color: red;
-    font-size: 23px;
-    font-style: italic;
+/*id dos produtos na parte de podutos*/
+#p{
+    width: 100%;
+    padding-left:14%;
 }
-
-
-
-#f {
-    text-align: center;
-    background-color: #ff5100e3;
-    font-style:italic;
-    
-}
-
-/*pagina index*/
-
-h2,
-h3 {
-    padding-left: 5%;
-    font-style: italic;
-    font-size: 27px;
-}
-/*configuraçoes nos itens na tela principal*/
-.col-sm-3 {
-    background-color: #ff5100e1;
-    text-align: center;
-}
-
-#dp {
-    display: flex;
-}
-
-/*pagina produtos*/
-
-ul {
-    vertical-align: top;
-    width: 70%;
-
-    list-style-type: none;
-}
-
-/*.organizacao {
-
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 100%;
-    margin: 0 auto;
-    padding-left: 5%;
-    text-align: center;
-}
-*/
-/*.itens1 {
-
-    padding-left: 5%;
-    padding-right: 5%;
-    text-align: center;
-}*/
-
-#dp {
-    display: flex;
-}
-
-#text1 {
-    font-size: 10pt;
-    font-family: Arial, Helvetica, sans-serif;
-    font-style: oblique;
-}
-
-#text2 {
-    padding: 1px, 1px, 1px, 1px;
-    text-decoration: line-through;
-    font-size: 10pt;
-}
-
-#text3 {
-    font-size: 15pt;
-    color: red;
-}
-
-/*pagina contatos*/
 
 section {
     text-align: center;
@@ -123,16 +28,24 @@ form {
     width: 50%;
     margin-left: 25%;   
     
-}
-
-h2,
-h3 {
-    font-style: italic;
-}
-
-/*pagina lojas*/
+}   
 
 .texto {
     display: inline;
     text-align: center;
+}
+/*icones do boodstrap*/
+.bi-emoji-smile{
+    
+    color: green;
+}
+.bi-emoji-neutral{
+    color:rgba(255, 166, 0, 0.644);
+} 
+.bi-emoji-frown{
+    color:red;
+}
+
+.bi-cart4{
+    color:grey;
 }
